--- a/package.json
+++ b/package.json
@@ -7,17 +7,18 @@
   },
   "dependencies": {
     "body-parser": "~1.15.1",
+    "consign": "^0.1.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
+    "dotenv": "^2.0.0",
     "express": "~4.13.4",
     "hjs": "~0.0.6",
-    "morgan": "~1.7.0",
-    "serve-favicon": "~2.3.0",
     "jsonapi-serializer": "^3.4.1",
+    "morgan": "~1.7.0",
     "pg": "^6.1.0",
     "sequelize": "^3.24.4",
     "sequelize-cli": "^2.4.0",
-    "consign": "^0.1.2",
-    "dotenv": "^2.0.0"
+    "sequelize-to-json": "^0.10.1",
+    "serve-favicon": "~2.3.0"
   }
 }
